css/BlogStyle.css
.blogheader h1{
    text-align: center;
    margin-top: 5%;
}

.blogcategories{
    width: 20%;
    float: left;
    padding-right: 2px;
}

.blogcategories h2{
    font-size: 2.5vw;
    margin-bottom: 10px;
    text-align: center;
}

.blogcategories li{
    display: flex;
}

.blogcategories a{
    text-decoration: none;
    outline: none;
    background-color: var(--clr-wit);
    color: #4b9600;
    letter-spacing: 2px;
    font-family: 'Lora', serif;
    font-weight: bold;
    text-transform: uppercase;
    width: 90%;
    text-align: center;
    border-bottom: 0.2vw solid #1b701b;
    margin-left: auto;
    margin-right: auto;
}

.blogcategories a:hover{
    background-color: #1b701b;
    border-color: #1b701b;
    color: var(--clr-wit);
    cursor: pointer;
}

.blogheader button, .comment-upload button, .comment-upload a, .user-delete-blogpost-btn, .user-edit-blogpost-btn{
    border: 1vw solid #1B701B;
    background-color: #1B701B;
    border-radius: 10px;
    text-decoration: none;
    padding: 8px;
    color: white;
    font-family: 'Montserrat', serif;
    font-weight: bold;
    font-size: 1rem;
    outline: none;
}

.blogheader button:hover, .comment-upload button:hover, .comment-upload a:hover{
    border-color: #208820;
    background-color: #208820;
    cursor: pointer;
}

.blogheader{
    text-align: center;
}

.blogheader form{
    display: inline-block;
    margin-top: 2%;
}

.blogcontainer{
    margin-top: 2%;
}

.grid-3-col{
    grid-template-columns: 1fr 1fr 1fr;
    grid-column-gap: 3rem;
    grid-row-gap: 3rem;

    width: 80%;
    margin-left: auto;
    margin-right: auto;

    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    float: right;
}

.blogDescription{
    padding-bottom: 3%;
    background-color: var(--clr-wit);
    text-align: center;
}

.blogDescription h2{
    margin-top: 10px;
    word-wrap: break-word;
    text-align: center;
}

.blogDescription p{
    display: block;
    margin-top: 10px;
    padding-left: 1rem;
    padding-right: 1rem;
}

.blogDescription h3{
    display: inline-block;
    margin-top: 10px;
}

.blogDescription h4{
    display: flex;
    margin-top: 10px;
    justify-content: space-between;
}

.alignleft{
    float: left;
    padding-left: 1rem;
}

.alignright{
    float: right;
    padding-right: 1rem;
    background-color: var(--clr-groen);
    color: var(--clr-wit);
}

.blogImage{
    overflow: hidden;
}

.blogImage img{
    object-fit: cover;
    height: 40vh;
    width: 100%;
    object-position: center;
    transform: scale(1);
    transition: 0.3s ease-in-out;
}

.blogImage img:hover{
    transform: scale(1.2);
}

/* One advertisement */
.blogpost {
    position: relative;
    border-bottom: 0.25vw solid var(--clr-groen);
    width: 40vh;
    box-shadow: 2px 2px 6px 0px rgba(0,0,0,0.3)
}

.blogpost:hover{
    transition: transform .2s ease-in;
    transform: translateY(-20px);
    cursor: pointer;
}

@media screen and (min-width:1100px){
    .blogheader h1{
        font-size: 3vw;
    }
    
    .blogDescription h4{
        font-size: 0.80vw;
    }

    .blogDescription h3, .blogDescription p{
        font-size: 1vw;
    }

    .blogDescription h2{
        font-size: 2vw;
    }

    .blogcategories a{
        font-size: 1.5vw;
    }

    .category-select{
        display: none;
    }

    .comment-upload textarea{
        width: 69%;
    }

    .comment-upload button{
        width: 30%;
        margin-left: 1%;
    }

    .comment-section{
        width: 50%;
    }
}

@media screen and (max-width:1100px){
    .blogheader h1{
        font-size: 6vw;
        margin-bottom: 5%;
    }

    .blogDescription h4{
        font-size: 1.60vw;
    }

    .blogDescription h3, .blogDescription p{
        font-size: 2vw;
    }

    .blogDescription h2{
        font-size: 4vw;
    }

    .grid-3-col{
        margin-top: 2%;
        width: 100%;
    }

    .blogcategories{
        display: none;
    }

    .blogheader button{
        margin-bottom: 5%;
    }

    .comment-section{
        width: 80%;
    }

    /* dropdown select menu for categories */
    .category-select select{
        background: #4b9600;
        color: #fff;
        padding: 10px;
        width: 70%;
        height: 100%;
        border: none;
        font-size: 1rem;
        font-family: 'Lora', serif;
        font-weight: bold;
        outline: none;
        border-radius: 1vw;
    }

    .comment-upload button, .comment-upload textarea{
        margin-top: 1%;
        width: 100%;
    }
}

/* Comment section for blogpost */
.comment-section{
    margin-left: auto;
    margin-right: auto;
}

.comment-bubble{
    border: 3px solid #1B701B;
    border-radius: 10px;
    margin-bottom: 2%;
    max-width: 75%;          
    min-width: 60%;
    float: left;             /*DEPENDING ON WHICH USER*/
}

.comment-bubble h1, .comment-bubble h2, .comment-bubble p{
    font-size: 1rem;
    margin: 1%;
}

.comment-bubble h1{
    float: left;
}

.comment-bubble h2{
    font-style: italic;
    float: right;
}

.comment-bubble p{
    text-align: left;
}

.comment-upload textarea{
    border: 2px solid #1B701B;
    border-radius: 0.5vw;
    resize: none;
    float: left;
    font-size: 16px;
}

.comment-upload button{
    border: 0.5vw solid #1B701B;
    float: right;
}

.comment-upload a{
    width: 100%;
    float: left;
}

/* Blogpost page edit and delete button */

.userFunctions-btn{
    /* float: right to push bloginfo down */
    float: right; 
    width: 100%;
    margin-right: 10%;
}

.user-delete-blogpost-btn, .user-edit-blogpost-btn{
    float: right;
    border: 10px solid rgb(190, 6, 6);
    background-color: rgb(190, 6, 6);
    padding: 0;
    margin-bottom: 1%;
    margin-left: 5px;
}

.user-edit-blogpost-btn{
    border-color: rgb(62, 117, 199);
    background-color: rgb(62, 117, 199);
}

.user-edit-blogpost-btn:hover{
    border-color:  rgb(47, 87, 148);
    background-color: rgb(47, 87, 148);
    cursor: pointer;
}

.user-delete-blogpost-btn:hover{
    border-color: rgb(145, 6, 6);
    background-color: rgb(145, 6, 6);
    cursor: pointer;
}

#userDeleteBlogpostPopUp{
    display: none;
}

#userDisplayBlogpost{
    height: 75vh;
}

